--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -1,4 +1,3 @@
-h1,
 h2,
 h3,
 body,
@@ -7,8 +6,15 @@ body,
   font-weight: 500 !important;
 }
 
-.logo-name {
+.logo-name,
+h1 {
   font-family: "Licorice", cursive !important;
+}
+
+.container-fluid h1 {
+  font-size: 9vh;
+  padding-top: 9vh;
+  color: white;
 }
 
 img {
@@ -30,16 +36,16 @@ img {
 }
 
 .bg-default-image {
-  background: linear-gradient(
-      rgba(176, 204, 246, 0.4),
-      rgba(138, 138, 138, 0.1)
-    ),
+  background: linear-gradient(0deg, rgba(0, 0, 150, 0.3), rgba(0, 0, 150, 0.3)),
     url("/images/default.jpg");
-  /* background-image: url("/images/default.jpg"); */
   background-size: cover;
-  height: 220px;
-  text-shadow: 2px 2px 9px #ffffff;
-  background-position-y: 80%;
+  height: 40vh;
+  background-position-y: 70%;
+  backdrop-filter: blur(10px);
+}
+
+.card-shadow {
+  box-shadow: 3px 3px 13px #dddddd;
 }
 
 /* .bg-default-image-index {
@@ -75,8 +81,8 @@ img {
 }
 
 .active {
-  background-color: #0360b8;
-  box-shadow: 0 -2px 4px #013362;
+  background-color: #e9eced !important;
+  /* box-shadow: 0 0px 4px #013362; */
 }
 
 .active-popup {
@@ -97,6 +103,9 @@ img {
 /* material ui change */
 .css-sghohy-MuiButtonBase-root-MuiButton-root {
   box-shadow: 0 0 0;
+}
+.css-hip9hq-MuiPaper-root-MuiAppBar-root {
+  box-shadow: 0px 2px 10px -1px #7f8799;
 }
 
 span a {
